DuPont DevSB/src/objects/ob1__Output_Template__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ob1__Attachment_Message__c</fullName>
        <defaultValue>&quot;Your report is attached.&quot;</defaultValue>
        <description>What message to include in the body of the email, when the report is being sent as an attachment.</description>
        <inlineHelpText>What message to include in the body of the email, when the report is being sent as an attachment.</inlineHelpText>
        <label>Attachment Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ob1__Automation_Criteria__c</fullName>
        <description>Stores the criteria used when using automated reporting.</description>
        <inlineHelpText>Used with automated reporting; any valid &apos;where clause&apos; construction for a soql query can be used.  See the salesforce.com documentation on soql.  Do not included the key word &quot;WHERE&quot;</inlineHelpText>
        <label>Automation Criteria</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ob1__BCC_Sender__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the system automatically BCC the sender on all emails?</description>
        <inlineHelpText>Should the system automatically BCC the sender on all emails?</inlineHelpText>
        <label>BCC Sender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ob1__BCC__c</fullName>
        <label>BCC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__CC__c</fullName>
        <label>CC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Content_Type_Extension__c</fullName>
        <description>Setting this field will cause the output to be sent as an attachment.  This is necessary for content types such as word, excel, pdf, etc.</description>
        <inlineHelpText>Setting this field will cause the output to be sent as an attachment.  This is necessary for content types such as word, excel, pdf, etc.</inlineHelpText>
        <label>Content Type Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Content_Type__c</fullName>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>application/vnd.ms-excel</fullName>
                </value>
                <value>
                    <fullName>text/html</fullName>
                </value>
                <value>
                    <fullName>application/pdf</fullName>
                </value>
                <value>
                    <fullName>application/vnd.ms-word</fullName>
                </value>
                <value>
                    <fullName>text/xml</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ob1__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Interface_Class_Name__c</fullName>
        <label>Interface Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Is_Default_for_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default for Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ob1__Keep_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ob1__Object_Description_Field__c</fullName>
        <defaultValue>&quot;Name&quot;</defaultValue>
        <description>What field on the object identified in Object Name, should the system use to help identify the record reported on in various pages?  (Defaults to Name)</description>
        <inlineHelpText>What field on the object identified in Object Name, should the system use to help identify the record reported on in various pages?  (Defaults to Name)</inlineHelpText>
        <label>Object Description Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Related_List_Field__c</fullName>
        <description>If you have added a lookup relationship field on Output_History so that you can create a related list on object (entered in Object Name), what is the api name of that field?</description>
        <label>Related List Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Reply_To__c</fullName>
        <inlineHelpText>Enter email address to reply to or &quot;&lt;user&gt;&quot; to use the address of the sending user.</inlineHelpText>
        <label>Reply To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Require_Approval_To_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should an approval process be required to send this report.
If so, you must implement some approval process on Output_History&apos;s Approved field</description>
        <inlineHelpText>Should an approval process be required to send this report.</inlineHelpText>
        <label>Require Approval To Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ob1__Save_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, all email related functionality will be disabled for this template.</description>
        <inlineHelpText>If checked, all email related functionality will be disabled for this template.</inlineHelpText>
        <label>Save Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ob1__Sender_Display_Name__c</fullName>
        <label>Sender Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Subject__c</fullName>
        <label>Subject</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ob1__Template_Class__c</fullName>
        <label>Template Class</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__To__c</fullName>
        <label>To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Use_Intelligent_Email_Limit_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked output builder when sending reports to an email belonging to a user (whether in the to, cc, or bcc fields) will send the email directly to that user to avoid the email counting towards the daily limit on emails sent.</description>
        <inlineHelpText>If checked output builder when sending reports to an email belonging to a user (whether in the to, cc, or bcc fields) will send the email directly to that user to avoid the email counting towards the daily limit on emails sent.</inlineHelpText>
        <label>Use Intelligent Email Limit Management</label>
        <type>Checkbox</type>
    </fields>
    <label>Output Template</label>
    <listViews>
        <fullName>ob1__All</fullName>
        <columns>NAME</columns>
        <columns>ob1__Template_Class__c</columns>
        <columns>ob1__Is_Default_for_Class__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Output Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Output Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ob1__Attachments_Require_Message</fullName>
        <active>true</active>
        <description>When sending an attachment style message, you must provide the attachment message</description>
        <errorConditionFormula>NOT(ISBLANK(ob1__Content_Type_Extension__c)) &amp;&amp; ISBLANK(ob1__Attachment_Message__c)</errorConditionFormula>
        <errorDisplayField>ob1__Attachment_Message__c</errorDisplayField>
        <errorMessage>You must provide an attachment message for reports that are sent as attachments</errorMessage>
    </validationRules>
</CustomObject>